<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bkSearchIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/bkSearchId"
        android:textSize="24sp"
        android:layout_gravity="top" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="25"
        android:hint="@string/suggest"
        android:id="@+id/bookById"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idSearch"
        android:id="@+id/btnBookId"
        android:backgroundTint="#7640FF"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/bkSearchGenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bkSearchGen"
        android:textSize="24sp"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="25"
        android:hint="@string/suggest2"
        android:id="@+id/bookSearch"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:id="@+id/btnSearch"
        android:backgroundTint="#7640FF"
        android:textColor="#FFF" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Battery"
        android:id="@+id/btnBattery"
        android:backgroundTint="#7640FF"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/batteryLevel"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/batProgBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="50dp"
        android:minWidth="200dp" />

</LinearLayout>